[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "rangeslicetools"
authors = [{name = "KOLANICH"}]
description = "A library to manipulate ranges and slices"
readme = "ReadMe.md"
keywords = ["range", "slice"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dynamic = ["version"]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-libs/rangeslicetools.py"
"Bug Tracker" = "https://codeberg.org/KOLANICH-libs/rangeslicetools.py/issues"

[tool.setuptools]
zip-safe = true
packages = ["rangeslicetools"]

[tool.setuptools_scm]
